Work section in progress. Currently trying to get format correct and items to align correctly

--- a/css/style.css
+++ b/css/style.css
@@ -19,3 +19,23 @@
     font-size: 30px;
     font-weight: bold;
 }
+
+.class-image1 {
+    display: flex;
+    height: 500px;
+    background-size: cover;
+}
+
+.class-cardCON {
+    padding: 20px;
+}
+
+.class-work {
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+}
+
+/* .class-image2 {
+    background-image: inherit;
+} */
